CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.4

	- Documentation updates (STR #2560, STR #2563)
	- The snmp.conf file referenced the wrong man page (STR
	  #2564)
	- The cupsaddsmb program didn't handle domain sockets
	  properly (STR #2556)
	- The scheduler now validates device URIs when adding
	  printers.
	- Updated httpSeparateURI() to support hostnames with
	  the backslash character.
	- Updated the Japanese localization (STR #2546)
	- The parallel backend now gets the current IEEE-1284
	  device ID string on Linux (STR #2553)
	- The IPP backend now checks the job status at
	  variable intervals (from 1 to 10 seconds) instead
	  of every 10 seconds for faster remote printing
	  (STR #2548)
	- "lpr -p" and "lpr -l" did not work (STR #2544)
	- Compilation failed when a previous version of CUPS
	  was installed and was included in the SSL include
	  path (STR #2538)
	- The scheduler did not reject requests with charsets
	  other than US-ASCII or UTF-8, and the CUPS API
	  incorrectly passed the locale charset to the scheduler
	  instead of UTF-8 (STR #2537)
	- cups-deviced did not filter out duplicate devices.
	- The AppleTalk backend incorrectly added a scheme
	  listing when AppleTalk was disabled or no printers
	  were found.
	- The PostScript filter generated N^2 copies when the
	  printer supported collated copies and user requested
	  reverse-order output.
	- The scheduler did not reprint all of the files in a
	  job that was held.
	- The scheduler did not update the printcap file after
	  removing stale remote queues.
	- The cupsd.conf man page incorrectly referenced
	  "AuthType Kerberos" instead of "AuthType Negotiate".


CHANGES IN CUPS V1.3.3

	- The scheduler did not use the attributes-natural-language
	  attribute when passing the LANG environment variable to
	  cups-deviced or cups-driverd.
	- The scheduler did not use the printer-op-policy when
	  modifying classes or printers (STR #2525)